--- a/CSharpBible/Games/VTileEdit.WPF/Views/MainWindow.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/MainWindow.xaml
@@ -1,17 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Window x:Class="VTileEdit.WPF.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
-        xmlns:controls="clr-namespace:VTileEdit.WPF.Views.Controls"
-        mc:Ignorable="d"
-        Title="{x:Static properties:Strings.MainWindowTitle}"
-        Height="720"
-        Width="1200"
-        MinWidth="960"
-        MinHeight="640">
+<?xml version="1.0" encoding="utf-8" ?>
+<Window
+    x:Class="VTileEdit.WPF.Views.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:VTileEdit.WPF.Views.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
+    Title="{x:Static properties:Strings.MainWindowTitle}"
+    Width="1200"
+    Height="720"
+    MinWidth="960"
+    MinHeight="640"
+    mc:Ignorable="d">
     <DockPanel>
         <DockPanel.Resources>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -19,17 +20,17 @@
 
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="{x:Static properties:Strings.MenuFileHeader}">
-                <MenuItem Header="{x:Static properties:Strings.MenuFileNew}" Command="{Binding NewCommand}" />
-                <MenuItem Header="{x:Static properties:Strings.MenuFileOpen}" Command="{Binding OpenCommand}" />
+                <MenuItem Command="{Binding NewCommand}" Header="{x:Static properties:Strings.MenuFileNew}" />
+                <MenuItem Command="{Binding OpenCommand}" Header="{x:Static properties:Strings.MenuFileOpen}" />
                 <Separator />
-                <MenuItem Header="{x:Static properties:Strings.MenuFileSave}" Command="{Binding SaveCommand}" />
-                <MenuItem Header="{x:Static properties:Strings.MenuFileSaveAs}" Command="{Binding SaveAsCommand}" />
+                <MenuItem Command="{Binding SaveCommand}" Header="{x:Static properties:Strings.MenuFileSave}" />
+                <MenuItem Command="{Binding SaveAsCommand}" Header="{x:Static properties:Strings.MenuFileSaveAs}" />
                 <Separator />
-                <MenuItem Header="{x:Static properties:Strings.MenuFileExit}" Command="{Binding ExitCommand}" />
+                <MenuItem Command="{Binding ExitCommand}" Header="{x:Static properties:Strings.MenuFileExit}" />
             </MenuItem>
             <MenuItem Header="{x:Static properties:Strings.MenuEditHeader}">
-                <MenuItem Header="{x:Static properties:Strings.MenuEditUndo}" Command="{Binding UndoCommand}" />
-                <MenuItem Header="{x:Static properties:Strings.MenuEditRedo}" Command="{Binding RedoCommand}" />
+                <MenuItem Command="{Binding UndoCommand}" Header="{x:Static properties:Strings.MenuEditUndo}" />
+                <MenuItem Command="{Binding RedoCommand}" Header="{x:Static properties:Strings.MenuEditRedo}" />
             </MenuItem>
         </Menu>
 
@@ -46,17 +47,19 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Expander Grid.Row="0"
-                          Margin="0,0,0,8"
-                          Collapsed="TileSetExpander_Collapsed"
-                          IsExpanded="True">
+                <Expander
+                    Grid.Row="0"
+                    Margin="0,0,0,8"
+                    Collapsed="TileSetExpander_Collapsed"
+                    IsExpanded="True">
                     <Expander.Header>
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <StackPanel VerticalAlignment="Center" Orientation="Horizontal">
                             <TextBlock Text="{x:Static properties:Strings.TileSetDetailsHeader}" />
-                            <TextBlock Text=" *"
-                                       Foreground="DarkOrange"
-                                       Visibility="{Binding TileSetHasPendingChanges, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                       ToolTip="{x:Static properties:Strings.TileSetPendingIndicator}" />
+                            <TextBlock
+                                Foreground="DarkOrange"
+                                Text=" *"
+                                ToolTip="{x:Static properties:Strings.TileSetPendingIndicator}"
+                                Visibility="{Binding TileSetHasPendingChanges, Converter={StaticResource BooleanToVisibilityConverter}}" />
                         </StackPanel>
                     </Expander.Header>
 
@@ -72,54 +75,63 @@
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
 
-                            <TextBlock Grid.Column="0"
-                                       Text="{x:Static properties:Strings.TileSetNameLabel}"
-                                       Margin="0,0,8,8"
-                                       VerticalAlignment="Center" />
-                            <TextBox Grid.Column="1"
-                                     Text="{Binding TileSetNameInput, UpdateSourceTrigger=PropertyChanged}"
-                                     Margin="0,0,8,8" />
+                            <TextBlock
+                                Grid.Column="0"
+                                Margin="0,0,8,8"
+                                VerticalAlignment="Center"
+                                Text="{x:Static properties:Strings.TileSetNameLabel}" />
+                            <TextBox
+                                Grid.Column="1"
+                                Margin="0,0,8,8"
+                                Text="{Binding TileSetNameInput, UpdateSourceTrigger=PropertyChanged}" />
 
-                            <TextBlock Grid.Column="0"
-                                       Grid.Row="1"
-                                       Text="{x:Static properties:Strings.TileSetWidthLabel}"
-                                       Margin="0,0,8,8"
-                                       VerticalAlignment="Center" />
-                            <TextBox Grid.Column="1"
-                                     Grid.Row="1"
-                                     Text="{Binding TileSetTileWidthInput, UpdateSourceTrigger=PropertyChanged}"
-                                     Margin="0,0,8,8" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Margin="0,0,8,8"
+                                VerticalAlignment="Center"
+                                Text="{x:Static properties:Strings.TileSetWidthLabel}" />
+                            <TextBox
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                Margin="0,0,8,8"
+                                Text="{Binding TileSetTileWidthInput, UpdateSourceTrigger=PropertyChanged}" />
 
-                            <TextBlock Grid.Column="0"
-                                       Grid.Row="2"
-                                       Text="{x:Static properties:Strings.TileSetHeightLabel}"
-                                       Margin="0,0,8,0"
-                                       VerticalAlignment="Center" />
-                            <TextBox Grid.Column="1"
-                                     Grid.Row="2"
-                                     Text="{Binding TileSetTileHeightInput, UpdateSourceTrigger=PropertyChanged}"
-                                     Margin="0,0,8,8" />
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                Margin="0,0,8,0"
+                                VerticalAlignment="Center"
+                                Text="{x:Static properties:Strings.TileSetHeightLabel}" />
+                            <TextBox
+                                Grid.Row="2"
+                                Grid.Column="1"
+                                Margin="0,0,8,8"
+                                Text="{Binding TileSetTileHeightInput, UpdateSourceTrigger=PropertyChanged}" />
                         </Grid>
 
-                        <TextBlock Text="{x:Static properties:Strings.TileSetApplyWarning}"
-                                   TextWrapping="Wrap"
-                                   Margin="8,8,8,8"
-                                   Foreground="DarkRed"
-                                   Visibility="{Binding TileSetShowsShrinkWarning, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <TextBlock
+                            Margin="8,8,8,8"
+                            Foreground="DarkRed"
+                            Text="{x:Static properties:Strings.TileSetApplyWarning}"
+                            TextWrapping="Wrap"
+                            Visibility="{Binding TileSetShowsShrinkWarning, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                            <Button Content="{x:Static properties:Strings.TileSetDiscardButtonLabel}"
-                                    Command="{Binding DiscardTileSetChangesCommand}"
-                                    Width="140"
-                                    Height="40"
-                                    Margin="0,0,8,0"
-                                    IsEnabled="{Binding TileSetHasPendingChanges}" />
-                            <Button Content="{x:Static properties:Strings.TileSetApplyButtonLabel}"
-                                    Command="{Binding ApplyTileSetChangesCommand}"
-                                    Height="40"
-                                    Width="140"
-                                    Margin="0,0,8,0"
-                                    IsEnabled="{Binding TileSetHasPendingChanges}" />
+                        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                            <Button
+                                Width="140"
+                                Height="40"
+                                Margin="0,0,8,0"
+                                Command="{Binding DiscardTileSetChangesCommand}"
+                                Content="{x:Static properties:Strings.TileSetDiscardButtonLabel}"
+                                IsEnabled="{Binding TileSetHasPendingChanges}" />
+                            <Button
+                                Width="140"
+                                Height="40"
+                                Margin="0,0,8,0"
+                                Command="{Binding ApplyTileSetChangesCommand}"
+                                Content="{x:Static properties:Strings.TileSetApplyButtonLabel}"
+                                IsEnabled="{Binding TileSetHasPendingChanges}" />
                         </StackPanel>
                     </StackPanel>
                 </Expander>
@@ -127,11 +139,12 @@
                 <controls:TileListView Grid.Row="1" FontFamily="{Binding SelectedFontFamily}" />
             </Grid>
 
-            <GridSplitter Grid.Column="1"
-                          Width="5"
-                          HorizontalAlignment="Stretch"
-                          VerticalAlignment="Stretch"
-                          Background="#22000000" />
+            <GridSplitter
+                Grid.Column="1"
+                Width="5"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Background="#22000000" />
 
             <controls:TileEditorHostView Grid.Column="2" DataContext="{Binding TileEditorHost}" />
         </Grid>
