--- a/CSharpBible/MVVM_Tutorial/MVVM_22_CTWpfCap/Views/WpfCapView.xaml
+++ b/CSharpBible/MVVM_Tutorial/MVVM_22_CTWpfCap/Views/WpfCapView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:ioc="clr-namespace:MVVM.View.Extension;assembly=MVVM_BaseLib"
+    xmlns:ioc="clr-namespace:MVVM.Views.Extension;assembly=MVVM_BaseLib"
     xmlns:local="clr-namespace:MVVM_22_CTWpfCap.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mvvm="clr-namespace:MVVM_22_CTWpfCap.ViewModels"
